# 3k-keypad-firmware

./: .gitignore  CMakeLists.txt  Flash_code.sh  README.md
src/: Animations.c  Animations.h  CMakeLists.txt  ColorConversion.c  ColorConversion.h  EventGenerator.c  EventGenerator.h  FlashStorage.c  FlashStorage.h  StateMachine.c  StateMachine.h  debounce.c  debounce.h  debounce.pio.h  globals.h  main.c  main.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
